@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2024-01-17 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Fix cloudi_service_router http_redirect_secondaries validation error
+
 2024-01-02 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add Mastodon README badge
